# rust-opengl-particle-simulation

./: Cargo.toml  README.md
data/shaders/: particles.frag  particles.vert
math/: Cargo.toml
math/src/: color_conversion.rs  colormap.rs  colors.rs  lib.rs  mat2x3.rs  mat4.rs  minmax.rs  projection.rs  rectangle.rs  rgb.rs  utility.rs  vec2.rs  vec3.rs  vec4.rs  vertex_types.rs
particles/: Cargo.toml
particles/src/: main.rs  particles.rs
rendering/: Cargo.toml
rendering/src/: lib.rs  renderer_gl.rs
sys/: Cargo.toml
sys/src/: events.rs  keysyms.rs  lib.rs  memory_mapped_file.rs  scope_guard.rs  unique_resource.rs  window_win32.rs  window_x11.rs
