[package]
name = "particles"
version = "0.1.0"
authors = ["doomguy"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
gl = "0.14.0"
png = "0.16.0"
sys = { path = "../sys" }
rendering = {path = "../rendering" }
math = { path = "../math" }